--- a/main-app/package.json
+++ b/main-app/package.json
@@ -22,5 +22,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vite": "^7.0.0"
+  },
+  "dependencies": {
+    "react-router-dom": "^7.6.3"
   }
 }
