--- a/main-app/netlify.toml
+++ b/main-app/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  command = "npm run build"
+  command = "cd .. && rm -rf node_modules && npm install && cd main-app && npm run build"
   publish = "dist"
+  environment = { NODE_ENV = "production" }
 
 [context.production.environment]
   VITE_MUSIC_LIBRARY_URL = "https://your-music-library.netlify.app"
