--- a/music-library-app/package.json
+++ b/music-library-app/package.json
@@ -22,5 +22,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vite": "^7.0.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
