--- a/main-app/package.json
+++ b/main-app/package.json
@@ -20,11 +20,11 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "vite": "^7.0.0"
+    "react-dom": "^19.1.0"
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "vite": "^7.0.0"
   }
 }
