--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "homepage": "https://github.com/balaji-atturu/finacplus-frontend-code#readme",
   "dependencies": {
+    "@vitejs/plugin-react": "^4.6.0",
     "vite": "^7.0.0"
   }
 }
