--- a/main-app/package.json
+++ b/main-app/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.0"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "lodash": "^4.17.21",
     "react-router-dom": "^7.6.3",
     "vite": "^7.0.0"
