--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@originjs/vite-plugin-federation": "^1.4.1",
     "@vitejs/plugin-react": "^4.6.0",
+    "axios": "^1.10.0",
     "vite": "^7.0.0"
   }
 }
