--- a/main-app/package.json
+++ b/main-app/package.json
@@ -20,7 +20,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "terser": "^5.43.1"
   },
   "dependencies": {
     "axios": "^1.10.0",
