--- a/music-library-app/package.json
+++ b/music-library-app/package.json
@@ -21,6 +21,7 @@
     "globals": "^16.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "terser": "^5.43.1",
     "vite": "^7.0.0"
   },
   "dependencies": {
