--- a/music-library-app/package.json
+++ b/music-library-app/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --emptyOutDir",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build": "vite build --emptyOutDir"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
