--- a/main-app/netlify.toml
+++ b/main-app/netlify.toml
@@ -4,7 +4,7 @@
   environment = { NODE_ENV = "production" }
 
 [context.production.environment]
-  VITE_MUSIC_LIBRARY_URL = "https://your-music-library.netlify.app"
+  VITE_MUSIC_LIBRARY_URL = "https://music-library-separate.netlify.app"
 
  
 
