--- a/music-library-app/netlify.toml
+++ b/music-library-app/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "cd .. && rm -rf node_modules && npm install && cd music-library && npm run build"
+  command = "cd .. && rm -rf node_modules && npm install && cd music-library-app && npm run build"
   publish = "dist"
   environment = { NODE_ENV = "production" }
 
