--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "preview:music": "cd music-library && npm run preview"
   },
   "devDependencies": {
+    "babel-plugin-react-css-modules": "^5.2.6",
     "concurrently": "^8.2.2",
+    "path": "^0.12.7",
+    "postcss": "^8.5.6",
     "terser": "^5.43.1"
   },
   "repository": {
