--- a/music-library-app/netlify.toml
+++ b/music-library-app/netlify.toml
@@ -1,13 +1,11 @@
- [build]
-  command = "npm run build"
+[build]
+  command = "npm install && npm run build"
   publish = "dist"
   environment = { NODE_ENV = "production" }
 
 [[headers]]
   for = "/assets/*"
   [headers.values]
-    Content-Type = "application/javascript"
+    Content-Type = "text/css"  # Changed from application/javascript
+    Cache-Control = "public, max-age=31536000"
     Access-Control-Allow-Origin = "*"
-
-   
-
