--- a/music-library-app/netlify.toml
+++ b/music-library-app/netlify.toml
@@ -6,6 +6,6 @@
 [[headers]]
   for = "/assets/*"
   [headers.values]
-    Content-Type =  application/javascript  
+    Content-Type =  "application/javascript"  
     Cache-Control = "public, max-age=31536000"
     Access-Control-Allow-Origin = "*"
