--- a/music-library-app/netlify.toml
+++ b/music-library-app/netlify.toml
@@ -1,11 +1,13 @@
 [build]
-  command = "npm install && npm run build"
+  command = "npm run build"
   publish = "dist"
   environment = { NODE_ENV = "production" }
 
 [[headers]]
   for = "/assets/*"
   [headers.values]
-    Content-Type =  "application/javascript"  
-    Cache-Control = "public, max-age=31536000"
+    Content-Type = "application/javascript"
     Access-Control-Allow-Origin = "*"
+
+   
+
