--- a/main-app/netlify.toml
+++ b/main-app/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "cd .. && rm -rf node_modules && npm install && cd main-app && npm run build"
+  command = "npm install && npm run build"
   publish = "dist"
   environment = { NODE_ENV = "production" }
 
@@ -13,3 +13,4 @@
   [headers.values]
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, OPTIONS"
+        Content-Type = "application/javascript; charset=utf-8"
