--- a/main-app/netlify.toml
+++ b/main-app/netlify.toml
@@ -1,7 +1,14 @@
 [build]
-  command = "npm run build"
+  command = "npm install && npm run build"
   publish = "dist"
-  environment = { 
-    NODE_ENV = "production",
-    VITE_MUSIC_LIBRARY_URL = "https://music-library-separate.netlify.app"
-  }
+  
+[build.environment]
+  NODE_ENV = "production"
+  VITE_MUSIC_LIBRARY_URL = "https://music-library-separate.netlify.app"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, OPTIONS"
+    Content-Type = "application/javascript; charset=utf-8"
