--- a/music-library-app/netlify.toml
+++ b/music-library-app/netlify.toml
@@ -1,11 +1,12 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  
+[build.environment]
+  NODE_ENV = "production"
 
 [[headers]]
-  for = "/*"
+  for = "/assets/*"
   [headers.values]
+    Content-Type = "application/javascript"
     Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, PATCH, OPTIONS"
-    Access-Control-Allow-Headers = "X-Requested-With, content-type, Authorization"
-    Cache-Control = "public, max-age=0, must-revalidate"
