--- a/music-library-app/netlify.toml
+++ b/music-library-app/netlify.toml
@@ -1,11 +1,13 @@
 
 
 
-   #[build]
+   [build]
   command = "npm run build"
   publish = "dist"
+
 [[headers]]
   for = "/*"
+  
  [headers.values]
     Access-Control-Allow-Origin = "*"
    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, PATCH, OPTIONS"
