--- a/main-app/netlify.toml
+++ b/main-app/netlify.toml
@@ -1,7 +1,17 @@
+# [build]
+#   command = "npm run build"
+#   publish = "dist"
+#   environment = { 
+#     NODE_ENV = "production",
+#     VITE_MUSIC_LIBRARY_URL = "https://music-library-separate.netlify.app"
+#   }
+
+
+
 [build]
   command = "npm run build"
   publish = "dist"
-  environment = { 
-    NODE_ENV = "production",
-    VITE_MUSIC_LIBRARY_URL = "https://music-library-separate.netlify.app"
-  }
+  
+[build.environment]
+  NODE_ENV = "production"
+  VITE_MUSIC_LIBRARY_URL = "https://music-library-separate.netlify.app"
