--- a/main-app/netlify.toml
+++ b/main-app/netlify.toml
@@ -1,3 +1,12 @@
-[build]
+
+
+  [build]
   command = "npm run build"
   publish = "dist"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
