--- a/music-library-app/netlify.toml
+++ b/music-library-app/netlify.toml
@@ -13,14 +13,23 @@
   publish = "dist"
 
 [[headers]]
-  for = "/assets/*"
+  for = "/assets/*.js"
   [headers.values]
     Content-Type = "application/javascript"
     Access-Control-Allow-Origin = "*"
-    Cache-Control = "public, max-age=31536000, immutable"
-    X-Content-Type-Options = "nosniff"
+
+[[headers]]
+  for = "/assets/*.css"
+  [headers.values]
+    Content-Type = "text/css"
+    Access-Control-Allow-Origin = "*"
 
 [[redirects]]
   from = "/remoteEntry.js"
   to = "/assets/remoteEntry.js"
+  status = 200
+
+[[redirects]]
+  from = "/assets/assets/*"
+  to = "/assets/:splat"
   status = 200
