--- a/music-library-app/netlify.toml
+++ b/music-library-app/netlify.toml
@@ -18,26 +18,15 @@
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET,OPTIONS"
     Access-Control-Allow-Headers = "*"
-    Access-Control-Expose-Headers = "*"
-    Vary = "Origin"
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Content-Type = "application/javascript"
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
   for = "/remoteEntry.js"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET,OPTIONS"
-    Access-Control-Expose-Headers = "*"
-
-[[headers]]
-  for = "/assets/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET,OPTIONS"
-    Access-Control-Expose-Headers = "*"
-
-[[headers]]
-  for = "/assets/remoteEntry.js"
-  [headers.values]
+    Content-Type = "application/javascript"
     Cache-Control = "public, max-age=31536000, immutable"
