--- a/music-library-app/netlify.toml
+++ b/music-library-app/netlify.toml
@@ -13,20 +13,18 @@
   publish = "dist"
 
 [[headers]]
-  for = "/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET,OPTIONS"
-    Access-Control-Allow-Headers = "*"
-
-[[headers]]
   for = "/*.js"
   [headers.values]
     Content-Type = "application/javascript"
-    Cache-Control = "public, max-age=31536000, immutable"
+    Access-Control-Allow-Origin = "*"
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+    Content-Type = "text/css"
+    Access-Control-Allow-Origin = "*"
 
 [[headers]]
   for = "/remoteEntry.js"
   [headers.values]
-    Content-Type = "application/javascript"
     Cache-Control = "public, max-age=31536000, immutable"
