--- a/music-library-app/netlify.toml
+++ b/music-library-app/netlify.toml
@@ -1,33 +1,21 @@
- # [build]
- # command = "npm run build"
- # publish = "dist"
 
- # [[headers]]
- # for = "/assets/remoteEntry.js"
-   # [headers.values]
- #  Content-Type = "application/javascript"
-  # Access-Control-Allow-Origin = "*"
+
+
 
 # [build]
-#   command = "npm run build"
-#   publish = "dist"
+#  command = "npm run build"
+#  publish = "dist"
 
 # [[headers]]
-#   for = "/*.js"
-#   [headers.values]
-#     Content-Type = "application/javascript"
-#     Access-Control-Allow-Origin = "*"
+#  for = "/*"
+#  [headers.values]
+#    Access-Control-Allow-Origin = "*"
+#    Access-Control-Allow-Methods = "GET,OPTIONS"
 
 # [[headers]]
-#   for = "/*.css"
-#   [headers.values]
-#     Content-Type = "text/css"
-#     Access-Control-Allow-Origin = "*"
-
-# [[headers]]
-#   for = "/remoteEntry.js"
-#   [headers.values]
-#     Cache-Control = "public, max-age=31536000, immutable"
+#  for = "/assets/remoteEntry.js"
+#  [headers.values]
+#    Cache-Control = "no-cache"
 
 
 
@@ -44,5 +32,8 @@
 [[headers]]
   for = "/assets/remoteEntry.js"
   [headers.values]
+    Content-Type = "application/javascript"  # ✅ Force correct MIME type
     Cache-Control = "no-cache"
+    Access-Control-Allow-Origin = "*"
+
 
