--- a/main-app/netlify.toml
+++ b/main-app/netlify.toml
@@ -12,6 +12,13 @@
   command = "npm run build"
   publish = "dist"
 
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Content-Type = "application/javascript"
+    Cache-Control = "no-cache"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
